# C-Exercise

./: CMakeLists.txt  README.md  TutorialConfig.h  tutorial.cxx
MathFunctions/: mysqrt.cxx
ModernC++/SmartPointer/: SmartPtrAsParam.cpp
cmake/src/: CMakeLists.txt  tutorial.cxx
cmake/src/MathFunctions/: CMakeLists.txt  MathFunctions.h
